--- a/composer.json
+++ b/composer.json
@@ -22,8 +22,8 @@
   ],
   "require": {
     "ext-mosquitto": "*",
-    "php": "~7.1",
-    "symfony/messenger": "~4.3"
+    "php": "^7.4|^8.0",
+    "symfony/messenger": "^4.4|^5.4|^6.0"
   },
   "require-dev": {
     "ext-intl": "*"
